--- a/index.html
+++ b/index.html
@@ -146,6 +146,27 @@
             placeholder="Nhập bột cà phê Collagen"
           />
         </div>
+
+        <h3>CÀ PHÊ BỘT</h3>
+        <div class="input-group mb-3">
+          <span class="input-group-text">HONEY (250g/Túi)</span>
+          <input
+            type="text"
+            class="form-control"
+            id="kg-HONEY"
+            placeholder="Nhập bột cà phê HONEY"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">HOÀN HẢO(340g/Túi)</span>
+          <input
+            type="text"
+            class="form-control"
+            id="kg-HH"
+            placeholder="Nhập bột cà phê HOÀN HẢO"
+          />
+        </div>
+
         <button type="button" class="btn btn-primary" onclick="funcs()">
           Tính toán
         </button>
